# Zoeken

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.runtime  Makefile  README.md  SECURITY.md  clippy.toml  default.config.yml  docker-compose.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  compat-upstream.yml  release.yml  sync-versions.yml
docs/: client-features.md  deployment.md  plugins.md  settings.yml.example
docs/compatibility/: data-assets.json  data-assets.md  engines.json  engines.md  intentional-differences.md  inventory.json  inventory.md  routes.json  routes.md  scorecard.md  targets.md
docs/plans/: architecture-cleanup.md  native-search-api.md
docs/security/: audit.md
packaging/debian/: changelog.in  control.in  copyright  limiter.toml  postinst  postrm  prerm  zoeken.default  zoeken.service  zoeken.settings.yml
packaging/nix/: package.nix
packaging/scripts/: build-deb.sh  package-version.sh
tools/: README.md  compare_searxng.py  compat_inventory.py  fetch_tracker_patterns.py  sync_versions.py  sync_versions.sh
zoeken-client/: .cta.json  biome.json  index.html  package.json  vite.config.ts
zoeken-client/public/: .gitkeep  manifest.json  robots.txt
zoeken-client/scripts/: generate-icons.mjs
zoeken-client/src/: main.tsx  routeTree.gen.ts  styles.css
zoeken-client/src/components/: ImageLightbox.tsx  MapCanvas.tsx  ResultTemplates.test.ts  ResultTemplates.tsx  SearchForm.tsx  SelectMenu.tsx  SiteNav.tsx  VideoCard.tsx
zoeken-client/src/lib/: api.test.ts  api.ts  calcEval.test.ts  calcEval.ts  clientCrypto.ts  didYouMean.test.ts  didYouMean.ts  i18n.ts  md5.ts  recentSearches.ts  searchDisplay.ts  searchParams.test.ts  searchParams.ts  sha224.ts  theme.ts  units.json  units.test.ts  units.ts  useLocalAnswers.ts
zoeken-client/src/routes/: __root.tsx  about.tsx  index.tsx  preferences.tsx  search.tsx  stats.tsx
zoeken/zoeken-answerers/: Cargo.toml
zoeken/zoeken-answerers/src/: crypto.rs  datetime.rs  lib.rs  random.rs  statistics.rs
zoeken/zoeken-answerers/tests/: answerer_invocation_prop.rs  random_prop.rs  statistics_prop.rs
zoeken/zoeken-autocomplete/: Cargo.toml
zoeken/zoeken-autocomplete/src/: backends.rs  lib.rs
zoeken/zoeken-autocomplete/tests/: autocomplete_integration.rs
zoeken/zoeken-botdetect/: Cargo.toml
zoeken/zoeken-botdetect/src/: client_ip.rs  config.rs  heuristics.rs  ip_lists.rs  lib.rs  link_token.rs  token_bucket.rs
zoeken/zoeken-botdetect/tests/: block_conditions_prop.rs  fail_open.rs  header_heuristics_prop.rs  link_token_prop.rs  pass_list_prop.rs  rate_limit_prop.rs  trusted_proxy_prop.rs
zoeken/zoeken-data/: Cargo.toml  build.rs
zoeken/zoeken-data/data/: autocomplete_backends.json  doi_resolvers.json  external_bangs.json  gsa_useragents.txt  info_pages.json  (+1 more)
zoeken/zoeken-engine-core/: Cargo.toml
zoeken/zoeken-engine-core/src/: challenge.rs  lib.rs
zoeken/zoeken-engine-core/tests/: error_count_state_machine_prop.rs  locale_translation_prop.rs  suspension_backoff_prop.rs
zoeken/zoeken-engines/: Cargo.toml
zoeken/zoeken-favicons/: Cargo.toml
zoeken/zoeken-favicons/src/: cache.rs  hmac.rs  lib.rs  proxy.rs  resolver.rs  service.rs
zoeken/zoeken-favicons/tests/: favicon_edge.rs  favicon_service_prop.rs  image_proxy_policy_prop.rs
zoeken/zoeken-metrics/: Cargo.toml
zoeken/zoeken-metrics/src/: cache.rs  lib.rs  recorder.rs
zoeken/zoeken-metrics/tests/: cache_backend_selection_prop.rs  cache_ttl_prop.rs  metrics_recording_prop.rs
zoeken/zoeken-network/: Cargo.toml
zoeken/zoeken-network/src/: flight_cache.rs  lib.rs
zoeken/zoeken-network/tests/: emulation_and_tor.rs  fingerprint_diagnostic.rs  google_probe.rs  named_network_selection_prop.rs  retry_count_prop.rs  round_robin_rotation_prop.proptest-regressions  round_robin_rotation_prop.rs  status_error_mapping_prop.rs
zoeken/zoeken-plugins/: Cargo.toml
zoeken/zoeken-plugins/plugins/: ahmia_filter.lua  calculator.lua  gen_units_lua.mjs  hash.lua  hostnames.lua  infinite_scroll.lua  oa_doi_rewrite.lua  self_info.lua  time_zone.lua  tor_check.lua  tracker_url_remover.lua  unit_converter.lua  unit_converter_logic.lua
zoeken/zoeken-plugins/src/: lib.rs  lua.rs
zoeken/zoeken-plugins/tests/: plugin_gating_prop.rs
zoeken/zoeken-prefs/: Cargo.toml
zoeken/zoeken-prefs/src/: lib.rs
zoeken/zoeken-prefs/tests/: bad_cookie_fallback.rs  cookie_roundtrip_prop.rs  merge_precedence_prop.rs
zoeken/zoeken-query/: Cargo.toml
zoeken/zoeken-query/src/: lib.rs
zoeken/zoeken-query/tests/: external_bang_prop.rs  param_mapping_prop.rs  selector_parsing_prop.rs  special_prefix_routing_prop.rs
zoeken/zoeken-results/: Cargo.toml
zoeken/zoeken-results/src/: lib.rs
zoeken/zoeken-results/tests/: incomplete_result_rejection.rs
zoeken/zoeken-search/: Cargo.toml
zoeken/zoeken-search/src/: aggregation.rs  execution.rs  lib.rs  metrics.rs  selection.rs
zoeken/zoeken-search/tests/: concurrent_timeout.rs  deadline_unresponsive_prop.rs  dedup_merge_prop.rs  engine_selection_prop.proptest-regressions  engine_selection_prop.rs  filter_propagation_prop.rs  full_failure_prop.rs  ordering_sidechannel_prop.rs  scoring_prop.rs
zoeken/zoeken-server/: Cargo.toml  limiter.toml
zoeken/zoeken-settings/: Cargo.toml
zoeken/zoeken-settings/src/: lib.rs  resolve.rs
zoeken/zoeken-settings/tests/: bounded_resource_limits_prop.rs  engine_overlay_prop.rs  env_override_precedence_prop.rs  resolve_bind_prop.rs  secret_key_decision_prop.rs  settings_file_overlay_prop.rs  settings_load_unit.rs
zoeken/zoeken-storage/: Cargo.toml
zoeken/zoeken-storage/migrations/postgres/: 0001_operational_storage.sql  0002_storage_invariants.sql  0003_origin_retry_after.sql  0004_favicon_foreign_key.sql
zoeken/zoeken-storage/migrations/sqlite/: 0001_operational_storage.sql  0002_storage_invariants.sql  0003_origin_retry_after.sql  0004_favicon_foreign_key.sql
zoeken/zoeken-storage/src/: lib.rs  postgres.rs  sqlite.rs
zoeken/zoeken-storage/tests/: postgres_coordination.rs  storage_contract.rs
(+481 files in other folders)
