[package]
name = "zoeken-answerers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-data = { workspace = true }
zoeken-results = { workspace = true }
zoeken-query = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
