[package]
name = "zoeken-autocomplete"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-network = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
http = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
