[package]
name = "zoeken-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-engine-core = { workspace = true }
metrics = { workspace = true }
moka = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
fred = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[features]
# Optional Valkey/Redis KvStore backend (fred). Off by default; the in-process
# moka + rusqlite backend is always available.
valkey = ["dep:fred"]

[lints]
workspace = true
