[package]
name = "zoeken-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-settings = { workspace = true }
tokio = { workspace = true }
# cookies + json + decompressors matching browser Accept-Encoding profiles
wreq = { workspace = true, features = [
    "cookies",
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
wreq-util = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
proptest = { workspace = true }

[lints]
workspace = true
