[package]
name = "zoeken-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-data = { workspace = true }
zoeken-results = { workspace = true }
zoeken-query = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fasteval = { workspace = true }
md5 = { workspace = true }
mlua = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
wreq = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
