[package]
name = "zoeken-prefs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-data = { workspace = true }
zoeken-settings = { workspace = true }
zoeken-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
