[package]
name = "zoeken-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
zoeken-engine-core = { workspace = true }
zoeken-results = { workspace = true }
zoeken-query = { workspace = true }
zoeken-metrics = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
proptest = { workspace = true }
metrics = { workspace = true }

[lints]
workspace = true
