[package]
name = "zoeken-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
